my-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-backend-service
spec:
  selector:
    app: my-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
